<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/add_employee_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_employee" />

            <Button
                android:id="@+id/configure_time_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_backlog" />

            <Button
                android:id="@+id/set_wifi_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/configure_wifi_details" />

            <Button
                android:id="@+id/delete_employee_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_employee" />

            <Button
                android:id="@+id/view_attendance_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_attendance" />

            <Button
                android:id="@+id/connect_device_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect_to_device" />

        </LinearLayout>

        <TextView
            android:id="@+id/connection_display_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Not connected" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>